--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h2>Dog Adoption</h2>
+  <ul>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+        <img src="golden_retriever.jpg" alt="Golden Retriever">
+      </a>
+    </li>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Standard_Poodle">
+        <img src="poodle.jpg" alt="Poodle">
+      </a>
+    </li>
+  </ul>
 
 </body>
 
