--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h2>Dog Adoption</h2>
+	<!-- <h2>Dog Adoption</h2> -->
   <ul>
     <li>
       <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
