--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       </a>
     </li>
     <li>
-      <a href="https://en.wikipedia.org/wiki/Standard_Poodle">
+      <a href="https://en.wikipedia.org/wiki/Poodle">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle">
       </a>
     </li>
